# owasp-llm-lab-setup-guide

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-push.yaml  contracts.yml
contracts/: README.md
contracts/labs/: day4-llm03-real-model-lifecycle.json  day5-llm10-unbounded-consumption.json  day6-llm-guard.json  schema.json
docker/: README.md  build-and-push.sh  docker-compose.yaml
docker/base-gpu/: Dockerfile
docker/dvla/: Dockerfile
docker/llm-host/: Dockerfile
docker/llmgoat/: Dockerfile  health_entrypoint.py
docker/vuln-agent/: Dockerfile  pyproject.toml
docker/vuln-agent/app/: json_safe.py  llm.py  main.py  tool_call_parser.py  tools.py
docker/vuln-agent/app/templates/: index.html
docker/vuln-rag/: Dockerfile  pyproject.toml
docker/vuln-rag/app/: embedding.py  guardrails.py  llm.py  main.py
docker/vuln-rag/app/scenarios/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py
docker/vuln-rag/app/templates/: index.html
docs/: ARCHITECTURE.md  DAY6-GUARDRAILS-SETUP.md  INSTRUCTOR-IMAGE-BUILD.md  LAB-RESET-POLICY.md  LIVE-VALIDATION-2026-07-10.md  LIVE-VALIDATION.md  LLM08-SETUP.md  STUDENT-QUICKSTART.md  TROUBLESHOOTING.md
examples/day6/: README.md
examples/llm03/: Dockerfile.llama-cpp  Dockerfile.registry  Dockerfile.trainer  infer_model.py  inspect_gguf.py  lifecycle_core.py  merge_adapter.py  registry_server.py  train_lora.py
examples/llm08/: README.md  mini_vector_search_app.py
infrastructure/: README.md
infrastructure/fake-registry/: server.py
tools/: lab_contract.py  run_lab_contract.py
(+110 files in other folders)
