[project]
name = "vuln-rag"
version = "0.1.0"
description = "OWASP LLM Lab — intentionally vulnerable RAG chatbot"
requires-python = ">=3.12"
# 슬림 deps — vuln-rag 코드가 실제 사용하는 것만.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
